# supabase-lib-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TESTING.md  deny.toml  docker-compose.yml  flake.nix  justfile  pyproject.toml
.github/workflows/: build.yml  ci.yml  manual-publish-pypi.yml  manual-publish.yml  python-wheels.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md  WASM_GUIDE.md
examples/: auth_example.rs  basic_usage.rs  database_example.rs  dioxus_example.rs  functions_example.rs  functions_performance_example.rs  realtime_example.rs  session_management_example.rs  storage_admin_example.rs  storage_advanced_example.rs  storage_auth_example.rs  storage_example.rs  wasm_example.rs
examples/c_usage/: Makefile  main.c
include/: supabase.h
python/: README.md
python/examples/: basic_usage.py  database_queries.py
python/tests/: test_client.py
scripts/: setup-precommit.sh
src/: async_runtime.rs  auth.rs  client.rs  database.rs  error.rs  ffi.rs  functions.rs  lib.rs  performance.rs  python.rs  realtime.rs  storage.rs  types.rs  websocket.rs
src/realtime/: mod.rs
src/session/: encryption.rs  mod.rs  native.rs  storage.rs  wasm.rs
tests/: integration_tests.rs
tests/integration/: auth_tests.rs  client_tests.rs  database_tests.rs  e2e_auth.rs  e2e_database.rs  e2e_preflight.rs  e2e_realtime.rs  e2e_storage.rs  functions_advanced_tests.rs  performance_tests.rs  realtime_advanced_tests.rs  storage_advanced_tests.rs
tests/integration/common/: mod.rs
volumes/api/: kong.yml
volumes/db/: roles.sql
