[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "supabase-lib-rs"
version = "0.5.4"
description = "Fast and comprehensive Supabase client for Python, powered by Rust"
readme = "python/README.md"
license = {text = "MIT"}
authors = [
    {name = "Nick Nizovtsev", email = "nizovtsevnv@users.noreply.github.com"}
]
keywords = ["supabase", "database", "realtime", "auth", "storage", "functions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nizovtsevnv/supabase-lib-rs"
Repository = "https://github.com/nizovtsevnv/supabase-lib-rs.git"
Documentation = "https://github.com/nizovtsevnv/supabase-lib-rs/blob/main/python/README.md"
Issues = "https://github.com/nizovtsevnv/supabase-lib-rs/issues"

[tool.maturin]
features = ["python"]
module-name = "supabase_lib_rs"
python-source = "python"
strip = true
